--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -22,9 +22,10 @@
         <div id="sidebar">
 	    <div id="sidebarnav">
 	        <a href="../index.html">Home</a>
-		<a href="../research/research.html">Research</a>
-		<a href="../publications/publications.html">Publications</a>
+		<a href="../awards-honors/awards-honors.html">Awards & Honors</a>
 		<a class="active" href="professional-activities.html">Professional Activities</a>
+		<a href="../publications/publications.html">Publications</a>
+		<a href="../research/research.html">Research</a>
 		<a href="../teaching/teaching.html">Teaching</a>
 	    </div>
         </div>
@@ -35,6 +36,18 @@
 
             <p>
             Associate Editor of the Dialogue and Discourse journal: 2019-present
+            </p>
+
+            <p>
+            Action Editor of the Transactions of the Association for Computational Linguistics journal: 2024-present
+            </p>
+
+            <p>
+            Senior Action Editor of the ACL Rolling Review: 2024-present
+            </p>
+
+            <p>
+            Senior Area Chair (Dialogue and Conversational Interaction), International Conference on Computational Linguistics (COLING): 2025
             </p>
 
             <p>
@@ -150,7 +163,7 @@
             </p>
 
             <p>
-            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2023, 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
+            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2024, 2023, 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
             </p>
 
             <br>
@@ -250,7 +263,7 @@
 	    <h2>Conference and Workshop Program Committees and Reviewing</h2>
 
             <p>
-            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
+            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2024, 2023, 2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
             </p>
 
             <p>
@@ -266,7 +279,7 @@
             </p>
 
             <p>
-            Conference on Empirical Methods in Natural Language Processing (EMNLP): 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2011, 2009
+            Conference on Empirical Methods in Natural Language Processing (EMNLP): 2024, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2011, 2009
             </p>
 
             <p>
@@ -278,11 +291,15 @@
             </p>
 
             <p>
-            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2023, 2022, 2020, 2019, 2018, 2017
+            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2024, 2023, 2022, 2020, 2019, 2018, 2017
             </p>
 
             <p>
             International Conference on Autonomous Agents and Multi-Agent Systems (AAMAS): 2015, 2014
+            </p>
+
+            <p>
+            Conference on Uncertainty in Artificial Intelligence (UAI): 2024
             </p>
 
             <p>
@@ -360,7 +377,7 @@
             </p>
 
             <p>
-            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2023, 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012
+            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2024, 2023, 2022, 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012
             </p>
 
             <p>
