--- a/publications/publications.html
+++ b/publications/publications.html
@@ -22,9 +22,10 @@
         <div id="sidebar">
 	    <div id="sidebarnav">
 	        <a href="../index.html">Home</a>
-		<a href="../research/research.html">Research</a>
-		<a class="active" href="publications.html">Publications</a>
+		<a href="../awards-honors/awards-honors.html">Awards & Honors</a>
 		<a href="../professional-activities/professional-activities.html">Professional Activities</a>
+		<a class="active" href="publications.html">Publications</a>
+		<a href="../research/research.html">Research</a>
 		<a href="../teaching/teaching.html">Teaching</a>
 	    </div>
         </div>
@@ -140,6 +141,17 @@
 
 	    <h2>Conference and Workshop Papers</h2>
 
+            <p>
+            Kallirroi Georgila, Carla Gordon, Anton Leuski, Ron Artstein, and David Traum.
+	    Studying Team Effectiveness via Dialogue Analysis.
+            In <em> Proceedings of the Interservice/Industry Training, Simulation and Education Conference (I/ITSEC)</em>, Orlando, Florida, USA, 2024. (to appear)
+	    </p>
+
+            <p> Kallirroi Georgila.
+            Comparing Pre-Trained Embeddings and Domain-Independent Features for Regression-Based Evaluation of Task-Oriented Dialogue Systems.
+            In <em>Proceedings of the 25th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, Kyoto, Japan, 2024. (to appear)
+            </p>
+
 	    <p> Kallirroi Georgila and David Traum.
             <a href="georgila_iwsds24.pdf">
 	    Evaluation of Off-the-shelf Whisper Models for Speech Recognition Across Diverse Dialogue Domains.</a>	      
@@ -212,15 +224,13 @@
             In <em>Proceedings of SPIE 11413, Artificial Intelligence and Machine Learning for Multi-Domain Operations Applications II, 114130V, SPIE Defense + Commercial Sensing Conference</em>, Online Only, California, USA, 2020. 
 	    </p>  
 	    
-	    <p>
-            Carla Gordon, Volodymyr Yanov, David Traum, and Kallirroi Georgila.
+	    <p> Carla Gordon, Volodymyr Yanov, David Traum, and Kallirroi Georgila.
             <a href="gordon_londonlogue19.pdf">
             A Wizard of Oz Data Collection Framework for Internet of Things Dialogues.</a>
             In <em>Proceedings of the 23rd Workshop on the Semantics and Pragmatics of Dialogue (SemDial-LondonLogue)</em>, pp. 168-170, London, UK, 2019. 
 	    </p>
 
-	    <p>
-            Kallirroi Georgila, Mark G. Core, Benjamin D. Nye, Shamya Karumbaiah, Daniel Auerbach, and Maya Ram.
+	    <p> Kallirroi Georgila, Mark G. Core, Benjamin D. Nye, Shamya Karumbaiah, Daniel Auerbach, and Maya Ram.
             <a href="georgila_aamas19.pdf">
             Using Reinforcement Learning to Optimize the Policies of an Intelligent Tutoring System for Interpersonal Skills Training.</a>
             In <em>Proceedings of the 18th International Conference on Autonomous Agents and Multiagent Systems (AAMAS)</em>, pp. 737-745, Montreal, Canada, 2019. 
