--- a/research/research.html
+++ b/research/research.html
@@ -22,9 +22,10 @@
         <div id="sidebar">
 	    <div id="sidebarnav">
 	        <a href="../index.html">Home</a>
-		<a class="active" href="research.html">Research</a>
-		<a href="../publications/publications.html">Publications</a>
+		<a href="../awards-honors/awards-honors.html">Awards & Honors</a>
 		<a href="../professional-activities/professional-activities.html">Professional Activities</a>
+		<a href="../publications/publications.html">Publications</a>
+		<a class="active" href="research.html">Research</a>
 		<a href="../teaching/teaching.html">Teaching</a>
 	    </div>
         </div>
