--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <div id="sidebar">
             <div id="sidebarnav">
                 <a class="active" href="index.html">Home</a>
-		<a href="research/research.html">Research</a>
-		<a href="publications/publications.html">Publications</a>
+	        <a href="awards-honors/awards-honors.html">Awards & Honors</a>
 		<a href="professional-activities/professional-activities.html">Professional Activities</a>
+		<a href="publications/publications.html">Publications</a>
+		<a href="research/research.html">Research</a>
 		<a href="teaching/teaching.html">Teaching</a>
 	    </div>
         </div>
