--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -22,9 +22,10 @@
         <div id="sidebar">
 	    <div id="sidebarnav">
 	        <a href="../index.html">Home</a>
-		<a href="../research/research.html">Research</a>
-		<a href="../publications/publications.html">Publications</a>
+		<a href="../awards-honors/awards-honors.html">Awards & Honors</a>
 		<a href="../professional-activities/professional-activities.html">Professional Activities</a>
+		<a href="../publications/publications.html">Publications</a>
+		<a href="../research/research.html">Research</a>
 		<a class="active" href="teaching.html">Teaching</a>
 	    </div>
         </div>
@@ -32,6 +33,10 @@
 	<div id="contentarea">
 
 	    <h2>Teaching</h2>
+            <p>
+            <a href="https://sites.google.com/view/usc-csci644-spring2024/" target="_blank">CSCI 644: Natural Language Dialogue Systems. Spring 2024.</a>
+            </p>
+
             <p>
             <a href=cs544-spring2021/index.html target="_blank">CSCI 544: Applied Natural Language Processing. Spring 2021.</a>
             </p>
