--- a/research/research.html
+++ b/research/research.html
@@ -36,42 +36,24 @@
             <p>
             My research focuses on natural language processing and artificial 
             intelligence with a particular interest in the field of machine 
-            learning for natural language dialogue processing (in both 
-            spoken and written forms). In natural language dialogue two or 
-            more participants interact in order to exchange information, 
-            perform a task, negotiate, or even for pure entertainment 
-            purposes. Natural language dialogue systems allow users to 
-            interact with computers using language (spoken or written) by 
-            trying to simulate how humans interact with one another. 
-            Due to the technological challenges they impose as well as their 
-            potential for commercial exploitation, natural language dialogue 
-            systems have attracted increased attention in both academia and 
-            industry. Natural language dialogue systems have applications 
-            in many different domains, for example, providing information, 
-            command-and-control, tutorial dialogue (and generally dialogue for 
-            training, e.g., leadership skills, interviewing skills, etc.), 
-            healthcare applications (e.g., virtual human interviewers that 
-            interact with people who suffer from depression or post-traumatic 
-            stress), storytelling, controlling smart homes, 
-            companions for the elderly, etc.
+            learning (including deep learning and deep reinforcement learning)
+	    for natural language dialogue processing (including
+	    spoken, written, and multimodal dialogue). 
             <br>
             <br>
             The underlying concept behind my research work is how to learn 
-            human behavior patterns from existing human-machine interaction 
-            data in order to make natural language dialogue systems more 
-            human-like, robust to errors and misunderstandings, and adaptive 
-            to different types of human users and domains. This is an 
-            iterative procedure: build a dialogue system, have the system 
-            interact with humans, analyze the data from these interactions, 
-            use the data from these interactions to improve the dialogue 
-            system (e.g., by learning behavior patterns directly from the 
-            data), and so forth. 
+            human behavior patterns from existing human-human and human-machine
+	    interaction data in order to make natural language dialogue
+	    systems more human-like, robust to errors and misunderstandings,
+	    and adaptive to different types of human users and domains. 
             <br>
             <br>
             My research interests include all aspects of natural language 
             dialogue processing with a focus on statistical dialogue management
-            (reinforcement learning of dialogue policies),
+            (deep reinforcement learning of dialogue policies), 
             expressive conversational speech synthesis, and speech recognition.
+	    I also work on multi-agent modeling and intelligent tutoring
+	    systems.
             </p>
 
             <br>
