--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="header">
         <h1>Kallirroi Georgila</h1>
         <div class="description">
-            <a class="caps" href="http://ict.usc.edu">Institute for Creative Technologies,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a> 
+            <a class="caps" href="https://ict.usc.edu">Institute for Creative Technologies,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a> 
             <br>
-            <a class="caps" href="http://www.cs.usc.edu/">Department of Computer Science,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a>
+            <a class="caps" href="https://www.cs.usc.edu/">Department of Computer Science,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a>
         </div>
     </div>
 	
@@ -38,9 +38,9 @@
 
 	    <h2>About Me</h2>
             <p>
-            I am a Research Associate Professor in the <a href="http://www.cs.usc.edu">Department of Computer Science</a> at the <a href="http://www.usc.edu">University of Southern California</a> and at the <a href="http://ict.usc.edu/">USC Institute for Creative Technologies</a>.
-            I am a member of the <a href="http://nld.ict.usc.edu/">Natural Language Dialogue Group</a> at the <a href="http://ict.usc.edu/">USC Institute for Creative Technologies</a>.
-            Previously I was a Research Scientist in the Natural Language Processing and Speech Research Group at the <a href="http://www.ets.org">Educational Testing Service</a>, and before that a Research Fellow in the <a href="http://www.ilcc.inf.ed.ac.uk">Institute for Language, Cognition and Computation</a> at the <a href="http://www.inf.ed.ac.uk">School of Informatics</a> of the <a href="http://www.ed.ac.uk">University of Edinburgh</a>. 		
+            I am a Research Associate Professor in the <a href="https://www.cs.usc.edu">Department of Computer Science</a> at the <a href="https://www.usc.edu">University of Southern California</a> and at the <a href="https://ict.usc.edu/">USC Institute for Creative Technologies</a>.
+            I am a member of the Natural Language Dialogue Group at the <a href="https://ict.usc.edu/">USC Institute for Creative Technologies</a>.
+            Previously I was a Research Scientist in the Natural Language Processing and Speech Research Group at the <a href="https://www.ets.org">Educational Testing Service</a>, and before that a Research Fellow in the <a href="https://www.ilcc.inf.ed.ac.uk">Institute for Language, Cognition and Computation</a> at the <a href="https://www.inf.ed.ac.uk">School of Informatics</a> of the <a href="http://www.ed.ac.uk">University of Edinburgh</a>. 		
             </p>
 
             <br>
