--- a/publications/publications.html
+++ b/publications/publications.html
@@ -10,11 +10,11 @@
     <div id="header">
         <h1>Kallirroi Georgila</h1>
         <div class="description">
-            <a class="caps" href="http://ict.usc.edu">Institute for Creative Technologies,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a> 
+            <a class="caps" href="https://ict.usc.edu">Institute for Creative Technologies,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a> 
             <br>
-	    <a class="caps" href="http://www.cs.usc.edu/">Department of Computer Science,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a>
+	    <a class="caps" href="https://www.cs.usc.edu/">Department of Computer Science,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a>
         </div>
     </div>
 	
@@ -143,13 +143,15 @@
 
             <p>
             Kallirroi Georgila, Carla Gordon, Anton Leuski, Ron Artstein, and David Traum.
-	    Studying Team Effectiveness via Dialogue Analysis.
-            In <em> Proceedings of the Interservice/Industry Training, Simulation and Education Conference (I/ITSEC)</em>, Orlando, Florida, USA, 2024. (to appear)
+            <a href="georgila_iitsec24.pdf">
+	    Studying Team Effectiveness via Dialogue Analysis.</a>
+            In <em> Proceedings of the Interservice/Industry Training, Simulation and Education Conference (I/ITSEC)</em>, Orlando, Florida, USA, 2024.
 	    </p>
 
             <p> Kallirroi Georgila.
-            Comparing Pre-Trained Embeddings and Domain-Independent Features for Regression-Based Evaluation of Task-Oriented Dialogue Systems.
-            In <em>Proceedings of the 25th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, Kyoto, Japan, 2024. (to appear)
+            <a href="georgila_sigdial24.pdf">
+            Comparing Pre-Trained Embeddings and Domain-Independent Features for Regression-Based Evaluation of Task-Oriented Dialogue Systems.</a>
+            In <em>Proceedings of the 25th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL)</em>, pp. 610-623, Kyoto, Japan, 2024.
             </p>
 
 	    <p> Kallirroi Georgila and David Traum.
