--- a/research/research.html
+++ b/research/research.html
@@ -10,11 +10,11 @@
     <div id="header">
         <h1>Kallirroi Georgila</h1>
 	<div class="description">
-            <a class="caps" href="http://ict.usc.edu">Institute for Creative Technologies,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a> 
+            <a class="caps" href="https://ict.usc.edu">Institute for Creative Technologies,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a> 
             <br>
-	    <a class="caps" href="http://www.cs.usc.edu/">Department of Computer Science,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a>
+	    <a class="caps" href="https://www.cs.usc.edu/">Department of Computer Science,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a>
         </div>
     </div>
 	
@@ -34,28 +34,63 @@
 
 	    <h2>Research</h2>
             <p>
-            My research focuses on natural language processing and artificial 
-            intelligence with a particular interest in the field of machine 
-            learning (including deep learning and deep reinforcement learning)
-	    for natural language dialogue processing (including
-	    spoken, written, and multimodal dialogue). 
-            <br>
-            <br>
-            The underlying concept behind my research work is how to learn 
-            human behavior patterns from existing human-human and human-machine
-	    interaction data in order to make natural language dialogue
-	    systems more human-like, robust to errors and misunderstandings,
-	    and adaptive to different types of human users and domains. 
-            <br>
-            <br>
-            My research interests include all aspects of natural language 
-            dialogue processing with a focus on statistical dialogue management
-            (deep reinforcement learning of dialogue policies), 
-            expressive conversational speech synthesis, and speech recognition.
-	    I also work on multi-agent modeling and intelligent tutoring
-	    systems.
+            My research work involves the application of machine learning and artificial intelligence (AI) to natural language processing (NLP) and computational linguistics.
+	    </p>
+
+	    <p>
+	    I have worked and am currently working on several topics related to NLP and computational linguistics such as natural language dialogue systems (spoken, text-based, multi-modal; including tutorial dialogue systems), reinforcement learning of dialogue system policies, speech recognition and synthesis, speaker recognition, speech disfluency detection and generation, linguistic and behavioral differences between older and young people, verbal indicators of psychological distress, entrainment of natural language dialogue system users, machine learning models of negotiation, incremental spoken language processing, personalization of dialogue systems, differences in interaction styles, and automated scoring of non-native speech for second language learning.
+	    </p>
+
+	    <p>
+	    My most recent work has been on natural language dialogue system evaluation, aligning large language models (LLMs) to human values (e.g., safety, transparency, trust) using reinforcement learning from human and artificial intelligence feedback, using natural language dialogue processing to understand and assess team effectiveness, dialogue embeddings (vector representations of dialogue context), speech recognition, and reinforcement learning of policies for intelligent tutoring systems. 
             </p>
 
+	    <p><b>Research Interests</b><br>
+
+	    <p>  
+	    Natural language dialogue systems and modeling (including spoken language and multi-modal dialogue, and two-party and multi-party dialogue).
+	    </p>
+
+	    <p>
+	    Natural language processing (including spoken language processing).
+	    </p>  
+
+            <p>
+	    Speech recognition.
+            <p>
+
+	    <p>  
+	    Speech synthesis.
+            </p>
+	    
+            <p>
+	    Large language model (LLM) alignment and safety using reinforcement learning from human feedback (RLHF) and reinforcement learning from AI feedback (RLAIF).
+            </p>
+
+	    <p>
+	    Machine learning (including reinforcement learning and deep learning).
+	    </p>  
+
+	    <p>
+	    Human-machine interaction and collaboration.
+	    </p>
+
+	    <p>
+	    Human-robot interaction and collaboration.
+	    </p>
+
+	    <p>
+	    Multi-agent modeling (including modeling teams of agents and human-agent teaming).
+	    </p>
+
+            <p>
+	    Trustworthy AI agents.
+            </p>
+
+	    <p>
+	    Intelligent tutoring systems.
+            </p>
+	       
             <br>
             <br>
 
