--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -10,11 +10,11 @@
     <div id="header">
         <h1>Kallirroi Georgila</h1>
 	<div class="description">
-            <a class="caps" href="http://ict.usc.edu">Institute for Creative Technologies,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a> 
+            <a class="caps" href="https://ict.usc.edu">Institute for Creative Technologies,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a> 
             <br>
-	    <a class="caps" href="http://www.cs.usc.edu/">Department of Computer Science,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a>
+	    <a class="caps" href="https://www.cs.usc.edu/">Department of Computer Science,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a>
         </div>
     </div>
 	
