--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -10,11 +10,11 @@
     <div id="header">
         <h1>Kallirroi Georgila</h1>
 	<div class="description">
-            <a class="caps" href="http://ict.usc.edu">Institute for Creative Technologies,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a> 
+            <a class="caps" href="https://ict.usc.edu">Institute for Creative Technologies,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a> 
             <br>
-	    <a class="caps" href="http://www.cs.usc.edu/">Department of Computer Science,</a>
-            <a class="caps" href="http://www.usc.edu/">University of Southern California</a>
+	    <a class="caps" href="https://www.cs.usc.edu/">Department of Computer Science,</a>
+            <a class="caps" href="https://www.usc.edu/">University of Southern California</a>
         </div>
     </div>
 	
@@ -255,7 +255,7 @@
             </p>
 
             <p>
-            Grant panelist for the National Science Foundation, USA (served on 3 reviewing panels)
+            Grant panelist for the National Science Foundation, USA (served on 4 reviewing panels)
             <p>
 
             <br>
@@ -291,7 +291,7 @@
             </p>
 
             <p>
-            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2024, 2023, 2022, 2020, 2019, 2018, 2017
+            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2025, 2024, 2023, 2022, 2020, 2019, 2018, 2017
             </p>
 
             <p>
@@ -364,6 +364,14 @@
             NeurIPS Human in the Loop Dialogue Systems Workshop: 2020
             </p>
 
+            <p>
+	    AAAI Advancing LLM-Based Multi-Agent Collaboration Workshop: 2025
+	    </p>
+	    
+            <p>
+	    AAAI Synergy of Reinforcement Learning and Large Language Models Workshop: 2024
+	    </p>
+
 	    <p>
             Annual West Coast NLP Summit (WeCNLP): 2021
             </p>
@@ -390,10 +398,6 @@
 
             <p>
             Workshop on the Dialogue System Technology Challenge (DSTC): 2023, 2021
-            </p>
-
-            <p>
-            The 1st Chinese Audio-Textual Spoken Language Understanding Challenge: 2019
             </p>
 
             <p>
