--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -351,7 +351,7 @@
             </p>
 
             <p>
-            International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2024, 2021, 2020, 2019, 2018, 2017
+            International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2025, 2024, 2021, 2020, 2019, 2018, 2017
             </p>
 
             <p>
