--- a/research/research.html
+++ b/research/research.html
@@ -32,7 +32,7 @@
 
 	<div id="contentarea">
 
-	    <h2>Research</h2>
+	    <h2>Research Overview</h2>
             <p>
             My research work involves the application of machine learning and artificial intelligence (AI) to natural language processing (NLP) and computational linguistics.
 	    </p>
@@ -45,7 +45,9 @@
 	    My most recent work has been on natural language dialogue system evaluation, aligning large language models (LLMs) to human values (e.g., safety, transparency, trust) using reinforcement learning from human and artificial intelligence feedback, using natural language dialogue processing to understand and assess team effectiveness, dialogue embeddings (vector representations of dialogue context), speech recognition, and reinforcement learning of policies for intelligent tutoring systems. 
             </p>
 
-	    <p><b>Research Interests</b><br>
+            <br>
+	    
+	    <h2>List of Research Interests</h2>
 
 	    <p>  
 	    Natural language dialogue systems and modeling (including spoken language and multi-modal dialogue, and two-party and multi-party dialogue).
